<resources>
    <string name="app_name">MyPWD</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="account">계정</string>
    <string name="id">아이디</string>
    <string name="password">패스워드</string>
    <string name="register">계정등록</string>
    <string name="login">로그인</string>
    <string name="name">이름</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="register_complete">등록 완료</string>
    <string name="login_success">로그인 성공</string>
    <string name="login_fail">로그인 실패</string>
    <string name="login_wrong">ID 혹은 PASSWORD가 틀렸습니다.</string>
    <string name="add">추가</string>
    <string name="delete">삭제</string>
    <string name="show">표시</string>
    <string name="backup">백업</string>
    <string name="restore">복원</string>
    <string name="delete_success">삭제 성공</string>
    <string name="detail">상세</string>
    <string name="list">목록</string>
    <string name="site">사이트</string>
    <string name="purpose">용도</string>
    <string name="remark">비고</string>
    <string name="warn_data_empty">데이터가 없습니다.</string>
    <string name="pwd_insert_success">등록하였습니다.</string>
    <string name="pwd_udpate_success">수정하였습니다.</string>
    <string name="warn_pwd_delete_confirm">이 항목을 삭제하시겠습니까?</string>
    <string name="warn_pwd_delete_title">삭제 확인</string>
    <string name="warn_backbutton_press">2초 이내에 뒤로 가기 버튼을 한 번 더 누르면 종료됩니다.</string>
    <string name="setting">설정</string>
    <string name="terminate">종료</string>
    <string name="backup_success">백업 성공</string>
    <string name="restore_success">복원 성공</string>
    <string name="search">검색</string>
    <string name="saveID">아이디 저장</string>
</resources>