<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PwdDetailActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#411BA4"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="4dp"
        app:title="@string/detail"
        app:popupTheme="?attr/android:popupTheme"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp">
        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/site"
            android:gravity="center"/>
        <EditText
            android:id="@+id/pwdDetail_tbxSite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/site"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/id"
            android:gravity="center"/>
        <EditText
            android:id="@+id/pwdDetail_tbxId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/id"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/password"
            android:gravity="center"/>
        <EditText
            android:id="@+id/pwdDetail_tbxPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/purpose"
            android:gravity="center"/>
        <EditText
            android:id="@+id/pwdDetail_tbxPurpose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/purpose"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/remark"/>
        <EditText
            android:id="@+id/pwdDetail_tbxRemark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/remark"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:minLines="3"
            android:maxLines="5"
            android:scrollbars="vertical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/pwdDetail_btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_margin="10dp"
            />
    </LinearLayout>
</LinearLayout>